# rpa-pysim

./: .gitignore  LICENSE  README.md  README_zh.md  notes.md  pyproject.toml  requirements.txt
docs/: CONFIDENTIAL_DESTROY_DESIGN.md  CONTROL_BLOCK_SPEC.md  DCB_DESIGN_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  SECURITY_GROUP_SPEC.md
examples/: nested_virtualization.py  syscall_demo.py  try_catch_demo.py
rpa_sim/: __init__.py  arm_emulator.py  core.py  emulator.py  interrupt.py  isa_simple.py  machine.py  memory.py  rpa_logic.py  security_domain.py  security_group.py  stdio.py
rpa_sim/isa/: __init__.py  arm.py  base.py  x86.py
tests/: test_core.py  test_emulator.py  test_heterogeneous.py  test_isa_simple.py  test_rpa.py  test_security_domain.py  test_security_group.py  test_thread_exception.py
